# sentiment_analyzation

./: .gitignore  dataset2text.py  gpt.py  main.py  pyproject.toml
datasets/: copyright.txt
datasets/short_talk/: short_talk_data.txt
train_model/: test_learn.py  test_learn_new.py
