[tool.poetry]
name = "25-winter-research-"
version = "0.1.0"
description = ""
authors = ["Juan Lee <ninejuan@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
transformers = "^4.48.1"
peft = "^0.14.0"
torch = "^2.5.1"
datasets = "^3.2.0"
tiktoken = "^0.8.0"
blobfile = "^3.0.0"
protobuf = "^5.29.3"
sentencepiece = "^0.2.0"
trl = "^0.13.0"
scikit-learn = "^1.6.1"
evaluate = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
